# uvacore

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst  overview.rst  requirements.txt
docs/_static/: custom.css
docs/api/: config.rst  core.rst  index.rst  infrastructure.rst
scripts/: build.py  publish.py  test.sh
src/uvacore/: __init__.py
src/uvacore/config/: di.py
src/uvacore/core/: __init__.py  channel.py
src/uvacore/core/canonical/: __init__.py  dto.py  events.py  ports.py
src/uvacore/infrastructure/: __init__.py
src/uvacore/infrastructure/adapters/: __init__.py  base.py
src/uvacore/infrastructure/event_system/: outbox.py
tests/: test_imports.py
